🔐 Initial commit: OP Stack Security Research Lab
✨ Features added:
- Modern security research dashboard with real-time monitoring
- Flask backend with comprehensive API endpoints
- Slither integration for advanced static analysis
- MCP server integration for AI-powered analysis
- Hardhat and Foundry testing environments
- Vulnerable contracts and exploit PoCs for research
- Automated security testing and reporting
- Professional UI with responsive design

🎯 Security Tools:
- Vulnerability scanning (reentrancy, access control, gas optimization)
- Bytecode analysis and exploit testing
- AI-powered security analysis via Heurist Mesh
- Payment security analysis via KukaPay
- Real-time metrics and system monitoring

🧪 Testing Framework:
- L2 replay attack PoC with comprehensive tests
- Reentrancy exploit contracts
- Automated test suites for security validation

📊 Dashboard Features:
- BlockScout integration for blockchain exploration
- Live terminal output for all security operations
- Service status monitoring with visual indicators
- Professional security researcher interface

Ready for comprehensive OP Stack security research! 🚀

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,9 @@ mcp-servers/heurist-mesh-mcp-server/
 mcp-servers/kukapay-mcp-servers/
 !mcp-servers/mcp-config.json
 !mcp-servers/.env.mcp.template
+
+# External projects (separate repositories)
+StorageProject/
+optimism/
+simple-optimism-node/
+infra/
